<resources>
    <string name="BMAppUpdate">应用更新</string>
    <string name="BMBreak_Network">未联网</string>
    <string name="BMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="BMGprsCondition">（提示：非WIFI环境）</string>
    <string name="BMIgnore">忽略该版</string>
    <string name="BMNewVersion">最新版本:</string>
    <string name="BMNotNow">以后再说</string>
    <string name="BMTargetSize">新版本大小:</string>
    <string name="BMToast_IsUpdating">正在更新中....</string>
    <string name="BMUpdateCheck">v3.1.4Beta</string>
    <string name="BMUpdateContent">更新内容</string>
    <string name="BMUpdateNow">立即更新</string>
    <string name="BMUpdateSize">仅需要下载:</string>
    <string name="BMUpdateTitle">发现新版本</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_center_earn_rewards">我的书单</string>
    <string name="account_center_feedback_group">夜间模式</string>
    <string name="account_center_share_group">分享XXXX</string>
    <string name="account_center_share_rating">意见反馈</string>
    <string name="action_share">分享</string>
    <string name="ad_end_time_login">请登录查看特权到期时间</string>
    <string name="ad_tips_str">广告是为了更多的免费内容，感谢您的支持与理解!</string>
    <string name="ad_watch_video_no_ad">看视频免广告</string>
    <string name="add_book_request">我要求书</string>
    <string name="addbook_time">求书时间: %1$s</string>
    <string name="addbook_title">求书信息\n书名：%1$s</string>
    <string name="agree_normal">同意并继续</string>
    <string name="agree_xiaomi">同意</string>
    <string name="already_add">移出书架</string>
    <string name="anythink_basead_ad_text">AD</string>
    <string name="anythink_basead_click_empty">This ads does not support click to open</string>
    <string name="anythink_basead_click_fail">Failed to open Ads</string>
    <string name="anythink_cm_feedback_btn_text">feedback</string>
    <string name="anythink_cm_feedback_dialog_close_close">Close</string>
    <string name="anythink_cm_feedback_dialog_close_submit">Submit</string>
    <string name="anythink_cm_feedback_dialog_content_balck_screen">Black screen</string>
    <string name="anythink_cm_feedback_dialog_content_cnr">Click no response</string>
    <string name="anythink_cm_feedback_dialog_content_other">Other issues</string>
    <string name="anythink_cm_feedback_dialog_content_stuck">Video stuck</string>
    <string name="anythink_cm_feedback_dialog_title">feedback</string>
    <string name="anythink_confirm_dialog_application_permission">permission</string>
    <string name="anythink_confirm_dialog_download_now">Download</string>
    <string name="anythink_confirm_dialog_give_up">Give up</string>
    <string name="anythink_confirm_dialog_privacy_agreement">privacy</string>
    <string name="anythink_confirm_dialog_publisher">%s</string>
    <string name="anythink_confirm_dialog_version">v%s</string>
    <string name="anythink_interstitial_text_loading_default">The ad is loading...</string>
    <string name="anythink_myoffer_cta_install_now">Install Now</string>
    <string name="anythink_myoffer_cta_learn_more">Learn More</string>
    <string name="anythink_myoffer_feedback_abnormal">Abnormal</string>
    <string name="anythink_myoffer_feedback_black_white_screen">Show Failed</string>
    <string name="anythink_myoffer_feedback_can_not_close">Not Close</string>
    <string name="anythink_myoffer_feedback_fraud_ads">Fraud Ads</string>
    <string name="anythink_myoffer_feedback_hint">Please enter the suggestion first! Suggestion is within 100 words</string>
    <string name="anythink_myoffer_feedback_induce_click">Induce Click</string>
    <string name="anythink_myoffer_feedback_not_interesting">Boring</string>
    <string name="anythink_myoffer_feedback_plagiarism">Plagiarism</string>
    <string name="anythink_myoffer_feedback_report">Report</string>
    <string name="anythink_myoffer_feedback_submit">Submit</string>
    <string name="anythink_myoffer_feedback_suggestion">Suggestion</string>
    <string name="anythink_myoffer_feedback_text">Feedback</string>
    <string name="anythink_myoffer_feedback_video_freeze">Video Freeze</string>
    <string name="anythink_myoffer_feedback_violation_of_laws">Illegal</string>
    <string name="anythink_myoffer_feedback_vulgar_porn">Vulgar porn</string>
    <string name="anythink_myoffer_panel_permission">Permission</string>
    <string name="anythink_myoffer_panel_privacy">Privacy</string>
    <string name="anythink_myoffer_panel_version">v%s</string>
    <string name="anythink_myoffer_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_reward_exit_confirm_give_up">Give up</string>
    <string name="anythink_myoffer_reward_exit_confirm_msg">Watch the video for %s seconds to get rewards. Are you sure you want to leave?</string>
    <string name="anythink_myoffer_shake_desc">Redirect to third-party App</string>
    <string name="anythink_myoffer_shake_full_title">Shake or tap for it</string>
    <string name="anythink_myoffer_shake_full_title2">Shake to get</string>
    <string name="anythink_myoffer_shake_simple_title">Shake to get</string>
    <string name="anythink_myoffer_shake_simple_title2">Shake to get</string>
    <string name="anythink_myoffer_shake_title">Shake your phone</string>
    <string name="anythink_myoffer_splash_skip_text">Skip</string>
    <string name="anythink_myoffer_webview_reload">Reload Ad.</string>
    <string name="anythink_reward_appdesc">app desc</string>
    <string name="anythink_reward_apptitle">app title</string>
    <string name="anythink_reward_clickable_cta_btntext">Play Game</string>
    <string name="anythink_reward_endcard_ad">AD</string>
    <string name="anythink_reward_endcard_vast_notice">Do you want to learn more?</string>
    <string name="anythink_reward_install">Install Now</string>
    <string name="anythink_reward_video_view_reward_time_complete">you have been rewarded</string>
    <string name="anythink_reward_video_view_reward_time_left">s left to be rewarded</string>
    <string name="anythink_splash_count_time_can_skip">SKIP</string>
    <string name="anythink_splash_count_time_can_skip_not">Auto close after</string>
    <string name="anythink_splash_count_time_can_skip_s">s</string>
    <string name="app_bar_behavior">com.amgcyo.cuttadon.view.comment.AppBarOverScrollViewBehavior</string>
    <string name="app_name">@string/app_name_release</string>
    <string name="app_name_release">肥猫阅读</string>
    <string name="app_praise_dlg_msg">喜欢吗？\n给个五星好评，鼓励我们做得更好！</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="askbook_msg">已超过当天求书次数，如需继续求书；需观看小视频后进行解锁!</string>
    <string name="askbook_msg_not_free">求书需要大数据寻找和匹配书籍，观看小视频，求书更便捷！\n中途退出观看则视为放弃哦~</string>
    <string name="baidu_tts">百度语音</string>
    <string name="baidu_tts_desc">此为百度离线合成语音，朗读过程中不消耗流量，朗读感情相对饱满丰富并提供多种发音人自由选择，如果出现无法正常使用的情况，请将错误码反馈给客服</string>
    <string name="bind_phone_tip">点击绑定手机号,保障账号安全</string>
    <string name="bmob_common_action_cancel">取消</string>
    <string name="bmob_common_action_continue">继续</string>
    <string name="bmob_common_action_info_exist">正在下载中.</string>
    <string name="brvah_load_end">没有更多数据了</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中…</string>
    <string name="cancel">取消</string>
    <string name="down_browser">浏览器下载</string>
    <string name="down_cancel">取 消</string>
    <string name="down_failed">下载失败，是否重试？</string>
    <string name="down_failed_tip">温馨提示</string>
    <string name="down_version">版本号：%1$s</string>
    <string name="fatten_intro_desc">你可以将暂时不看的作品移入养肥区中，当养到指定数量的章节后会自动提醒你。</string>
    <string name="fatten_str">养肥区</string>
    <string name="fission6_share_copy">复制链接</string>
    <string name="fission6_share_pyq">QQ分享</string>
    <string name="fission6_share_savesd">保存到相册</string>
    <string name="fission6_share_tips">扫描二维码，立即安装</string>
    <string name="fission6_share_vx">微信分享</string>
    <string name="ikonow">我知道了</string>
    <string name="not_agree_normal">不同意</string>
    <string name="permission_dialog_message">为了您能正常使用，需要以下权限</string>
    <string name="permission_dialog_title">权限申请</string>
    <string name="reader_anim_1">仿真</string>
    <string name="reader_anim_2">覆盖</string>
    <string name="reader_anim_3">平移</string>
    <string name="reader_anim_4">上下</string>
    <string name="reader_anim_5">普通</string>
    <string name="reader_lock_time_15">15分钟</string>
    <string name="reader_lock_time_30">30分钟</string>
    <string name="reader_lock_time_5">5分钟</string>
    <string name="reader_lock_time_cl">常亮</string>
    <string name="reader_lock_time_xt">跟随系统</string>
    <string name="settings_other">其它设置</string>
    <string name="settings_other_clear_cache">清理本章缓存</string>
    <string name="settings_other_clear_cache_summary">清理本章节漫画的缓存数据</string>
    <string name="settings_other_night_alpha">夜间模式亮度</string>
    <string name="settings_reader">阅读设置</string>
    <string name="settings_reader_ban_double_click">禁止双击放大</string>
    <string name="settings_reader_ban_double_click_summary">阅读状态禁止双击放大</string>
    <string name="settings_reader_bottomtips">关闭信息提示</string>
    <string name="settings_reader_bottomtips_summary">阅读时关闭底部页码、电量、时间等信息提示</string>
    <string name="settings_reader_interval">显示图片间隔</string>
    <string name="settings_reader_interval_summary">横竖屏卷轴翻页模式下显示图片间隔</string>
    <string name="settings_reader_keep_bright">保持屏幕常亮</string>
    <string name="settings_reader_keep_bright_summary">阅读状态保持屏幕常亮</string>
    <string name="settings_reader_quick_turn">快速翻页</string>
    <string name="settings_reader_quick_turn_summary">左右翻页模式下不显示翻页平移效果</string>
    <string name="settings_reader_scale_factor">双击放大百分比</string>
    <string name="settings_reader_show_topbar">全屏阅读</string>
    <string name="settings_reader_show_topbar_summary">阅读界面会显示顶部通知栏</string>
    <string name="settings_reader_volume_key_controls">音量键控制翻页</string>
    <string name="settings_reader_volume_key_controls_summary">音量键控制翻页</string>
    <string name="settings_reader_wifi">网络提醒</string>
    <string name="settings_reader_wifi_summary">在非WIFI网络下是否弹出提示</string>
</resources>