<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_reader"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_keep_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_keep_bright_summary"
            app:title="@string/settings_reader_keep_bright"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_show_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_show_topbar_summary"
            app:title="@string/settings_reader_show_topbar"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_ban_double_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_ban_double_click_summary"
            app:title="@string/settings_reader_ban_double_click"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_volume_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_volume_key_controls_summary"
            app:title="@string/settings_reader_volume_key_controls"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_quick_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_quick_turn_summary"
            app:title="@string/settings_reader_quick_turn"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_interval_summary"
            app:title="@string/settings_reader_interval"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_wifi_summary"
            app:title="@string/settings_reader_wifi"/>
        <com.amgcyo.cuttadon.view.comic.CheckBoxPreference
            android:id="@+id/settings_reader_show_bottomtips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_reader_bottomtips_summary"
            app:title="@string/settings_reader_bottomtips"/>
        <com.amgcyo.cuttadon.view.comic.SliderPreference
            android:id="@+id/settings_reader_scale_factor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:max="300"
            app:min="105"
            app:title="@string/settings_reader_scale_factor"/>
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_other"/>
        <com.amgcyo.cuttadon.view.comic.SliderPreference
            android:id="@+id/settings_other_night_alpha"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:max="200"
            app:min="100"
            app:title="@string/settings_other_night_alpha"/>
        <com.amgcyo.cuttadon.view.comic.OptionFrameLayout
            android:id="@+id/settings_other_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_other_clear_cache_summary"
            app:title="@string/settings_other_clear_cache"/>
    </LinearLayout>
</ScrollView>
