<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ll_fatten_info"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/feed_intro_img"
        android:contentDescription="@string/app_name"/>
    <com.amgcyo.cuttadon.view.otherview.CustomTextView
        android:textSize="26sp"
        android:textColor="@color/text_33"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20dp"
        android:text="@string/fatten_str"/>
    <TextView
        android:textSize="@dimen/sp_17"
        android:textColor="@color/text_66"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="@dimen/dimen20dp"
        android:layout_marginRight="@dimen/dimen25dp"
        android:text="@string/fatten_intro_desc"/>
    <TextView
        android:textSize="@dimen/sp_20"
        android:textColor="@color/btn_white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/feed_intro_btn"
        android:background="@drawable/bg_corners_login"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="@dimen/dimen42dp"
        android:text="@string/ikonow"/>
</LinearLayout>
