<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:id="@+id/title"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/down_failed_tip"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/version"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_version"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/tv_error"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"
        android:text="@string/down_failed"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">
        <Button
            android:textSize="14sp"
            android:textColor="@color/updateColor"
            android:id="@+id/btnBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_browser"
            android:layout_marginStart="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Space
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:textSize="14sp"
            android:textColor="@color/color_blue"
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:textSize="14sp"
            android:textColor="@color/color_blue"
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="重试"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</LinearLayout>
