<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/color_fff7f7f7"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/img_qrcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <com.amgcyo.cuttadon.view.otherview.ProgressWheel
            android:layout_gravity="center"
            android:id="@+id/fission6_progresswheel"
            android:padding="@dimen/dimen3dp"
            android:visibility="gone"
            android:layout_width="@dimen/dimen30dp"
            android:layout_height="@dimen/dimen30dp"
            app:matProg_barColor="@color/colorPrimary"
            app:matProg_barWidth="@dimen/dimen2dp"
            app:matProg_progressIndeterminate="true"/>
    </FrameLayout>
    <TextView
        android:textSize="13sp"
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/fission6_share_tips"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <com.amgcyo.cuttadon.view.otherview.TextDrawable
            android:textSize="14sp"
            android:textColor="@color/text_33"
            android:gravity="center"
            android:id="@+id/tv_vx"
            android:background="@drawable/simple_bg_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fission6_share_vx"
            android:drawablePadding="3dp"
            android:layout_weight="1"
            app:topDrawable="@drawable/share_vx"
            app:topDrawableHeight="30dp"
            app:topDrawableWidth="30dp"/>
        <com.amgcyo.cuttadon.view.otherview.TextDrawable
            android:textSize="14sp"
            android:textColor="@color/text_33"
            android:gravity="center"
            android:id="@+id/td_qq"
            android:background="@drawable/simple_bg_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fission6_share_pyq"
            android:drawablePadding="3dp"
            android:layout_weight="1"
            app:topDrawable="@mipmap/qq"
            app:topDrawableHeight="30dp"
            app:topDrawableWidth="30dp"/>
        <com.amgcyo.cuttadon.view.otherview.TextDrawable
            android:textSize="14sp"
            android:textColor="@color/text_33"
            android:gravity="center"
            android:id="@+id/tv_copy"
            android:background="@drawable/simple_bg_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fission6_share_copy"
            android:drawablePadding="3dp"
            android:layout_weight="1"
            app:topDrawable="@drawable/share_copy"
            app:topDrawableHeight="30dp"
            app:topDrawableWidth="30dp"/>
        <com.amgcyo.cuttadon.view.otherview.TextDrawable
            android:textSize="14sp"
            android:textColor="@color/text_33"
            android:gravity="center"
            android:id="@+id/tv_savesd"
            android:background="@drawable/simple_bg_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fission6_share_savesd"
            android:drawablePadding="3dp"
            android:layout_weight="1"
            app:topDrawable="@drawable/share_xiangce"
            app:topDrawableHeight="30dp"
            app:topDrawableWidth="30dp"/>
    </LinearLayout>
    <View style="@style/style_line"/>
    <TextView
        android:textColor="@color/text_66"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_cancel"
        android:background="@drawable/simple_bg_selector"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"/>
</LinearLayout>
