<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/permission_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/permission_dialog_margin">
    <TextView
        android:textSize="@dimen/permission_dialog_title_text_size"
        android:textColor="@color/permission_dialog_title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/permission_dialog_title_padding"
        android:layout_marginBottom="@dimen/permission_dialog_title_padding"
        android:text="@string/permission_dialog_title"/>
    <TextView
        android:textSize="@dimen/permission_dialog_message_text_size"
        android:textColor="@color/permission_dialog_message_color"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/permission_dialog_title_padding"
        android:text="@string/permission_dialog_message"/>
    <ScrollView
        android:id="@+id/permission_dialog_list_scroll"
        android:paddingBottom="@dimen/permission_dialog_title_padding"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45dp">
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_63"
            android:gravity="center"
            android:id="@+id/not_agree"
            android:background="@drawable/text_round_bg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/not_agree_normal"
            android:layout_weight="1"/>
        <View
            android:background="#ffebebeb"
            android:layout_width="1px"
            android:layout_height="match_parent"/>
        <TextView
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/agree"
            android:background="@drawable/text_round_bg_colorpri"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/agree_normal"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
