<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/load_more_loading_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/load_more_loading_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen15dp"
        android:layout_marginBottom="@dimen/dimen30dp">
        <ImageView
            android:id="@+id/load_more_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/animated_rotate_2"
            android:contentDescription="@null"/>
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@android:color/black"
            android:id="@+id/load_more_loading_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:text="@string/brvah_loading"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/load_more_load_fail_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brvah_load_failed"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen150dp">
        <TextView
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"
            android:id="@+id/load_more_load_end_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brvah_load_end"/>
    </FrameLayout>
</FrameLayout>
